--- a/src/components/ReviewBody/reviewbody.css
+++ b/src/components/ReviewBody/reviewbody.css
@@ -3,3 +3,9 @@
     width: 50px;
    
 }
+.background-all{
+    background-color: rgb(7, 7, 7);
+}
+.nav-color{
+    background-color: rgba(18, 17, 17, 0.777);
+}
